Kubernetes/01-dt-db_mongodb/01-dt-db_mongodb-k8.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dt-db
  namespace: dt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dt-db
  template:
    metadata:
      labels:
        app: dt-db
    spec:
      containers:
      - name: dt-db
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: config-volume
            mountPath: /docker-entrypoint-initdb.d
          - name: data
            mountPath: /data/db
      volumes:
        - name: config-volume
          configMap:
            name: twin-db-configmap
        - name: data
          persistentVolumeClaim:
            claimName: dt-db-data
---
apiVersion: v1
kind: Service
metadata:
    name: dt-db-svc
    namespace: dt
spec:
    ports:
      - name: dt-db
        port: 27017
        targetPort: 27017
    selector:
        app: dt-db
    type: ClusterIP
